# nexusGPT

./: .gitignore  README.md  backend.sh  celery.sh  dbs.sh  format.sh  frontend.sh  package-lock.json  package.json  start_tmux.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  download_embed_model.py  mcp_config.json  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 05f0981c1795_add_server_defaults.py  4f79c59ec267_make_userllmconfig_single_pk.py  5404bd4bcab9_changing.py  6f5e2a3b4c8d_add_performance_indexes.py
backend/src/: __init__.py  main.py
backend/src/config/: settings.py
backend/src/db/: __init__.py  dbs.py  graphdb.py  neo4j.py  qdrant_client.py  redis_client.py  redisdb.py  vectordb.py
backend/src/models/: __init__.py  code_schema.py  enums.py  models.py  schema.py
backend/src/router/: __init__.py  auth.py  messages.py  rag.py  sessions.py  setup.py
backend/src/service/: agent_service.py  auth_service.py  chat_service.py  cleanup.py  code_ingesation.py  constansts.py  constants.py  crypto.py  db_service.py  ingesation.py  message_service.py  middleware.py  prompt.py  prompts.py  repo_limits.py  s3.py  set_up_service.py  setup_service.py  tasks.py  tools.py  utils.py  worker.py
backend/src/service/agent/: mcp.py  middleware.py  prompts.py  tools.py
backend/src/service/agent/tools/: __init__.py  code.py  document.py  generic.py  mcp.py
backend/src/service/background/: tasks.py  worker.py
backend/src/service/pipelines/code/languages/: c.py  cpp.py  csharp.py  dart.py  elisp.py  elixir.py  go.py  gradle.py  grammer.py  haskell.py  html.py  java.py  javascript.py  kotlin.py  lua.py  maven.py  mybatis.py  perl.py  php.py  python.py  ruby.py  rust.py  scala.py  swift.py  typescript.py  typescriptjsx.py
backend/src/service/pipelines/code/scip/: scip_indexer.py  scip_pb2.py  scip_pipeline.py
backend/src/service/pipelines/code/tree_sitter/: cleanup.py  code_pipeline.py  code_utils.py  complied_object.py
backend/src/service/pipelines/rag/: documents.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: index.css  main.tsx  router.tsx  theme.ts
frontend/src/api/: apiInstance.ts  auth-api.ts  rag-api.ts  session-api.ts  setup-api.ts
frontend/src/components/: AIResponse.tsx  API-Key.tsx  AvaterExpandable.tsx  ChatArea.tsx  ColorModeToggle.tsx  CrediantialCard.tsx  DeleteAlert.tsx  EmptyState.tsx  FileDisplayForUserMessage.tsx  GitDialog.tsx  GitExplorer.tsx  GitQuery.tsx  InputField.tsx  LLMModelChooser.tsx  MarkdownComponents.tsx  McpConfigDialog.tsx  MediaPDF.tsx  MenuHelper.tsx  NavGateButton.tsx  RagStatusMessage.tsx  Response.tsx  Select.tsx  SendRequest.tsx  SessionComponent.tsx  SideBar.tsx  SideBarNav.tsx  SourceDisplay.tsx  UserRequest.tsx
frontend/src/components/ai/: actions.tsx  code-block.tsx  context.tsx  conversation.tsx  file-tree.tsx  inline-citation.tsx  message.tsx  prompt-input.tsx  shimmer.tsx  snippet.tsx  sources.tsx  task.tsx
frontend/src/components/ui/: clipboard.tsx  (+4 more)
frontend/src/entities/: Constants.ts  Message.ts  Session.ts
frontend/src/hooks/: useAuth.ts  useFieldForm.ts  useMessage.ts  useSessions.ts
frontend/src/lib/: parseFileTree.ts
frontend/src/pages/: ApiKeysPage.tsx  ChatPage.tsx  ErrorPage.tsx  Layout.tsx  LoginPage.tsx  SignUpPage.tsx
frontend/src/routes/: PrivateRoute.tsx  PublicRoute.tsx
frontend/src/store/: authStore.ts  initStore.ts  sessionStore.ts  validationStore.ts
frontend/src/theme/: codeBlockRecipes.ts  dialogcust.ts  editableRecipes.ts  file.ts  menuhelper.ts
