[project]
name = "backend"
version = "0.1.0"
description = "Refactored backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Framework & Server
    "fastapi>=0.115.12",
    "starlette>=0.46.2",
    "uvicorn==0.47.0",
    "python-multipart>=0.0.9",
    # Auth & Security
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    # Database & Async Drivers
    "sqlmodel>=0.0.38",
    "psycopg[binary]>=3.1.0",   # async driver — understands Neon's sslmode natively
    "psycopg2-binary>=2.9.9",   # kept for langgraph-checkpoint-postgres (sync/Celery)
    "redis>=5.2.0",
    # LangChain, LangGraph & Orchestration
    "celery>=5.6.3",
    "langchain",
    "langgraph",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-neo4j>=0.9.0",
    "langchain-qdrant>=1.1.0",
    "langchain-redis>=0.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    # LLM Providers & Vector Embeddings
    "openai",
    "anthropic",
    "ollama",
    "google-generativeai",
    "cohere",
    "mistralai",
    "qdrant-client>=1.12.0",
    # Utilities & Monitoring
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.4",
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "PyGithub>=2.5.0",
    "python-dotenv",
    "boto3",
    "posthog",
    "tree-sitter-language-pack>=1.8.1",
    "langchain-mistralai>=1.1.4",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "ddgs>=9.14.4",
    "langsmith>=0.8.5",
    "langchain-voyageai>=0.3.3",
    "langchain-nomic>=0.0.1",
    "tenacity>=9.1.4",
    "langchain-huggingface>=1.2.2",
    "transformers>=4.40.0",
    "sentry-sdk[celery,fastapi]>=2.60.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.1",
    "uvloop>=0.22.1",
    "gunicorn>=26.0.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "moto[amplify,ebs,ec2,s3]>=5.2.1",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
